--- a/sample-videochat-webrtc-new/src/main/res/values/strings.xml
+++ b/sample-videochat-webrtc-new/src/main/res/values/strings.xml
@@ -19,6 +19,14 @@
 
     <string name="welcoming_message">Login as any user on this deviсe and another(s) users on another device</string>
     <string name="select_user_to_call">Select Users You Want to Call</string>
+    <string name="choose_one_opponent">Choose one opponent</string>
+    
+    //temporary values
+    <string name="only_peer_to_peer_calls">Only 1-to-1 calls are available</string>
+
+    //Progress Dialog
+    <string name="load_opponents">Load opponents ...</string>
+    <string name="wait_until_loading_finish">Wait until loading finish</string>
 
     
     <string name="btn_audio_call">AUDIO CALL</string>
@@ -34,6 +42,7 @@
     <string name="WIFI_DISABLED">Call was stoped because connection was lost</string>
     <string name="NETWORK_ABSENT">Connection lost</string>
 
+    //Colors
     <color name="white">#FFFFFF</color>
     <color name="blue_green">#008080</color>
     <color name="grey">#606060</color>
