--- a/sample-videochat-webrtc-new/src/main/res/values/strings.xml
+++ b/sample-videochat-webrtc-new/src/main/res/values/strings.xml
@@ -46,9 +46,13 @@
     <string name="failed">Failed</string>
     <string name="WIFI_DISABLED">Call was stoped because connection was lost</string>
     <string name="NETWORK_ABSENT">Connection lost</string>
+    
     <string name="dialog_title">Quit the application?</string>
-    <string name="positive_response">Log out and exit</string>
-    <string name="negative_response">Minimize application</string>
+    <string name="positive_response">Log out</string>
+    <string name="negative_response">Minimize</string>
+    <string name="want_to_log_out">You want to log out from the application</string>
+    <string name="positive_button">Yes</string>
+    <string name="negative_button">Cancel</string>
 
     //Colors
     <color name="white">#FFFFFF</color>
