- added internet connection listener (need fixing)

--- a/sample-videochat-webrtc-new/src/main/res/values/strings.xml
+++ b/sample-videochat-webrtc-new/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="select_user_to_call">Select Users You Want to Call</string>
     <string name="choose_one_opponent">Choose one opponent</string>
     <string name="service_launched">Service for listening to calls launched</string>
+    <string name="service_stopped">Service for listening to calls stopped</string>
 
     
     //temporary values
